# cold-tools

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
src/: context.rs  deferred.rs  dispatch.rs  error.rs  guardrails.rs  lib.rs  limits.rs  parallel.rs  permission.rs  registry.rs  result_budget.rs  result_storage.rs  schema.rs  security.rs  tool.rs
src/core/: ask_user.rs  edit_file.rs  glob_tool.rs  list_dir.rs  mod.rs  notebook_edit.rs  plan_mode.rs  process.rs  read_file.rs  search_files.rs  terminal.rs  think.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  write_file.rs
src/mcp/: adapter.rs  mod.rs  resource_tools.rs
src/providers/: mod.rs  web.rs
